[gd_scene load_steps=40 format=2]

[ext_resource path="res://scens/character/zombie/Zombie.gd" type="Script" id=1]
[ext_resource path="res://assets/Character/zombie/walk1.png" type="Texture" id=2]
[ext_resource path="res://assets/Character/zombie/walk11.png" type="Texture" id=3]
[ext_resource path="res://assets/Character/zombie/idle3.png" type="Texture" id=4]
[ext_resource path="res://assets/Character/zombie/idle4.png" type="Texture" id=5]
[ext_resource path="res://assets/Character/zombie/idle5.png" type="Texture" id=6]
[ext_resource path="res://assets/Character/zombie/idle7.png" type="Texture" id=7]
[ext_resource path="res://assets/Character/zombie/walk6.png" type="Texture" id=8]
[ext_resource path="res://assets/Character/zombie/idle2.png" type="Texture" id=9]
[ext_resource path="res://assets/Character/zombie/attack1.png" type="Texture" id=10]
[ext_resource path="res://assets/Character/zombie/walk8.png" type="Texture" id=11]
[ext_resource path="res://assets/Character/zombie/walk9.png" type="Texture" id=12]
[ext_resource path="res://assets/Character/zombie/walk10.png" type="Texture" id=13]
[ext_resource path="res://assets/Character/zombie/walk3.png" type="Texture" id=14]
[ext_resource path="res://assets/Character/zombie/walk4.png" type="Texture" id=15]
[ext_resource path="res://assets/Character/zombie/attack2.png" type="Texture" id=16]
[ext_resource path="res://assets/Character/zombie/walk2.png" type="Texture" id=17]
[ext_resource path="res://assets/Character/zombie/idle1.png" type="Texture" id=18]
[ext_resource path="res://assets/Character/zombie/walk5.png" type="Texture" id=19]
[ext_resource path="res://assets/Character/zombie/idle6.png" type="Texture" id=20]
[ext_resource path="res://assets/Character/zombie/walk7.png" type="Texture" id=21]
[ext_resource path="res://assets/Character/zombie/attack6.png" type="Texture" id=22]
[ext_resource path="res://assets/Character/zombie/attack3.png" type="Texture" id=23]
[ext_resource path="res://assets/Character/zombie/attack4.png" type="Texture" id=24]
[ext_resource path="res://assets/Character/zombie/attack5.png" type="Texture" id=25]
[ext_resource path="res://assets/Character/zombie/attack7.png" type="Texture" id=26]
[ext_resource path="res://assets/Character/zombie/dying4.png" type="Texture" id=27]
[ext_resource path="res://assets/Character/zombie/dying5.png" type="Texture" id=28]
[ext_resource path="res://assets/Character/zombie/dying8.png" type="Texture" id=29]
[ext_resource path="res://assets/Character/zombie/dying6.png" type="Texture" id=30]
[ext_resource path="res://assets/Character/zombie/dying7.png" type="Texture" id=31]
[ext_resource path="res://assets/Character/zombie/dying1.png" type="Texture" id=32]
[ext_resource path="res://assets/Character/zombie/dying2.png" type="Texture" id=33]
[ext_resource path="res://assets/Character/zombie/dying3.png" type="Texture" id=34]
[ext_resource path="res://ui/bars/greenSimpleBar.png" type="Texture" id=35]
[ext_resource path="res://ui/bars/underGreenSimpleBar.png" type="Texture" id=36]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.63967
height = 7.5

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 20 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 26 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 29 ) ],
"loop": false,
"name": "dying",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 8 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64.5311, 6.00186 )

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 1024
script = ExtResource( 1 )

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.542154 )
shape = SubResource( 1 )

[node name="anim" type="AnimatedSprite" parent="."]
position = Vector2( 1.5068, -0.0468216 )
frames = SubResource( 2 )
animation = "dying"
frame = 7
playing = true

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -4, 7 )
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="left2" type="RayCast2D" parent="."]
position = Vector2( -4, 0 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 4, 7 )
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="right2" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="visionPivot" type="Node2D" parent="."]

[node name="vision" type="RayCast2D" parent="visionPivot"]
position = Vector2( 4, 0 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 8 )
collide_with_areas = true

[node name="jump_side" type="RayCast2D" parent="visionPivot"]
position = Vector2( 4, 0 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 4096
collide_with_areas = true

[node name="jump" type="RayCast2D" parent="visionPivot"]
position = Vector2( 4, 0 )
rotation = -2.79253
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 4096
collide_with_areas = true

[node name="down" type="RayCast2D" parent="visionPivot"]
position = Vector2( 10, 7 )
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 4096

[node name="down_side" type="RayCast2D" parent="visionPivot"]
position = Vector2( 10, 7 )
scale = Vector2( 0.3, 0.3 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 4096

[node name="vision" type="Area2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 0
collision_mask = 2

[node name="visionRange" type="CollisionShape2D" parent="vision"]
position = Vector2( 0, 4.40896 )
shape = SubResource( 3 )

[node name="ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="TextureProgress" parent="ui"]
margin_left = -4.42102
margin_top = -11.229
margin_right = 9.57898
margin_bottom = -9.22902
rect_scale = Vector2( 0.8, 0.6 )
value = 100.0
texture_under = ExtResource( 36 )
texture_progress = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="vision" to="." method="on_view"]
[connection signal="body_exited" from="vision" to="." method="out_of_sigh"]
